# Well-Typed-Qubits

./: CHANGELOG.md  Readme.md  cabal.project.freeze  out.txt  qType3.cabal
app/: Deutsch.hs  Grover.hs  Main.hs  Teleport.hs
src/Quant/: BitQuoter.hs  Demos.hs  NoMonad.hs  Quant.hs  Test.hs
src/Quant/Core/: Basis.hs  Bit.hs  OP.hs  PA.hs  QR.hs  QV.hs  Virt.hs
src/Quant/List/: NList.hs  OvLabel.hs  SList.hs  Vec.hs
src/Quant/QAct/: QAct.hs  QBitAct.hs  QHistory.hs
src/Quant/Quoters/: BitQuoter.hs  MatrixQuoter.hs  NatLabel.hs  SListQuoter.hs
test/: Spec.hs
