cabal-version:      3.0

name:               qType

version:            0.1.0.0

author:             Flávio Borin Júnior

maintainer:         flavioborinjunior@gmail.com

build-type:         Simple


common warnings
    ghc-options: -Wall

library quantum
    import:           warnings

    exposed-modules: Quant

    default-extensions:
        DataKinds, ConstraintKinds, TypeApplications, GADTs, AllowAmbiguousTypes,
        TypeFamilies, UndecidableInstances, TypeFamilies, RankNTypes, TypeOperators, 
        StandaloneKindSignatures, FlexibleInstances, ScopedTypeVariables, FlexibleContexts,
        LambdaCase, MultiParamTypeClasses, PolyKinds, OverloadedLabels, InstanceSigs, TemplateHaskell
        , QuasiQuotes, PatternSynonyms, TupleSections

    other-modules:
        Core.Bit
        Core.PA
        Core.Basis
        Core.QV
        Core.OP
        Core.QR
        Core.Virt
        
        List.Vec
        List.SList

        QAct.QAct
        QAct.QBitAct

        Quoters.BitQuoter
        Quoters.SListQuoter
        Quoters.NatLabel
        Quoters.MatrixQuoter
        NoMonad

    build-depends:   
        base ^>=4.19.1.0,
        containers ==0.6.8,
        random ==1.3.1,
        template-haskell ==2.21.0.0,
        haskell-src-meta ==0.8.15,
        mtl ==2.3.1

    default-language: Haskell2010

    hs-source-dirs: src/Quant

executable qType
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.19.1.0, quantum

    default-extensions: OverloadedLabels, QuasiQuotes, DataKinds, TypeApplications, GADTs, TypeFamilies, PatternSynonyms, LambdaCase

    hs-source-dirs:   app

    default-language: Haskell2010

test-suite quantum-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.14 && <5,
      quantum,
      tasty,
      tasty-hunit,
      tasty-quickcheck
  default-extensions: OverloadedLabels, QuasiQuotes, DataKinds, TypeApplications, GADTs, TypeFamilies, PatternSynonyms, LambdaCase

  default-language: Haskell2010